# wonderland-lang

./: .gitignore  Cargo.toml  bounds_equivalence.cs  contradict.cs  foo.cs  foo_bar_baz_traits.cs  from_into.cs  generate_impls.py  inf.cs  int.s  obj_test.cheshire  std.cheshire  tea  test.cs
adapter/: Cargo.toml  rustfmt.toml
adapter/src/: lib.rs
chris_test/src/: a.ch
src/: main.rs
src/ana/: analyze_argument_parity.rs  analyze_associated_types.rs  analyze_associated_types_and_methods.rs  analyze_binops.rs  analyze_constructor_fields.rs  analyze_control_flow.rs  analyze_elaborations.rs  analyze_enum_constructors.rs  analyze_fn_calls.rs  analyze_for_loops.rs  analyze_generics.rs  analyze_generics_parity.rs  analyze_global_names.rs  analyze_illegal_globals.rs  analyze_illegal_infers.rs  analyze_impls.rs  analyze_infallible_enums.rs  analyze_info.rs  analyze_module_refs.rs  analyze_modules.rs  analyze_names.rs  analyze_object_functions.rs  analyze_object_indices.rs  analyze_operators.rs  analyze_positional_enums.rs  analyze_returns.rs  analyze_self.rs  analyze_variables.rs  mod.rs  represent.rs  represent_visitor.rs
src/analyze/: analyze_generics.rs  analyze_infer.rs  analyze_info.rs  analyze_self.rs  analyze_traits.rs  analyze_variables.rs  mod.rs  represent.rs
src/ast/: ast_display.rs  display.rs  mod.rs  spanned.rs  visitor.rs
src/inst/: decorate.rs  mod.rs  post_solve.rs  represent.rs
src/lexer/: mod.rs  token.rs
src/lg/: mod.rs  represent.rs
src/parser/: ast.rs  ast_display.rs  display.rs  (+5 more)
std/: any.ch  asynchronous.ch  hash_map.ch  iterator.ch  lib.c  lib.ll  list.ch  mod.ch  mod.cheshire  operators.ch  operators.cheshire  option.ch  statepoint.c  statepoint.h  threading.ch  try.ch  vector.ch
test/: foo.c
(+78 files in other folders)
