[package]
name = "wonderland"
version = "0.1.0"
authors = ["Michael Goulet <michael@errs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
either = "1.5.2"
