[package]
name = "wonderland"
version = "0.1.0"
authors = ["Michael Goulet <michael@errs.io>"]
edition = "2018"

[features]
default = ["tr"]
lex = []
parse = ["lex"]
ana = ["parse"]
tyck = ["ana"]
inst = ["tyck"]
tr = ["inst"]

[dependencies]
lazy_static = "1.3.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
either = "1.5.2"
getopts = "0.2"
tempfile = "3.1.0"
