[package]
name = "wonderland"
version = "0.1.0"
authors = ["Michael Goulet <michael@errs.io>"]
edition = "2018"

[features]
default = ["vs"]
lex = []
ast = []
parse = ["ast", "lex"]
ana = ["parse"]
tyck = ["ana"]
inst = ["tyck"]
tr = ["inst", "inkwell"]         # Defunct
lg = ["inst", "gc", "gc_derive"] # Defunct
vs = ["inst", "itertools"]

[build-dependencies]
lalrpop = "0.18"

[dependencies]
lazy_static = "1.3.0"
either = "1.5.2"
getopts = "0.2"
tempfile = "3.1.0"
log = "0.4"
env_logger = "0.7"
adapter = { path = "adapter" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm9-0", optional = true }
gc = { version = "*", optional = true }
gc_derive = { version = "*", optional = true }
lalrpop = {version = "0.18", features = ["lexer"] }
lalrpop-util = "0.18"
regex = "1"
itertools = { version = "0.9.0", optional = true }
maplit = "1.0.2"
